--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,20 +11,54 @@ header{
   
 }
 
-
 .container{
   width: 990px;
-  background-color: red;
   display: flex;
   justify-content: space-between;
   
 }
 
 .logo{
-  background-color: aquamarine;
   display: flex;
   align-items: center;
   
-
 }
 
+.menu{
+  display: flex;
+  align-items: center;
+} 
+
+nav ul,
+nav li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  
+}
+
+nav ul{
+  display: flex;
+  
+}
+  
+nav a{
+  display: block;
+  text-decoration: none;
+  padding: 15px;
+  text-transform: uppercase;
+  color: #727272;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+}
+
+nav a.active, nav a:hover  {
+  background-color: #39aae1;
+  color: white;
+}
+
+#banner{
+  background-image: url('../images/img1.jpg');
+  background-size: cover;
+  height: 670px;
+}
