--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+*{
+  font-family: Arial, Helvetica, sans-serif;
+}
 body{
   margin: 0;
   padding: 0;
@@ -48,17 +51,110 @@ nav a{
   padding: 15px;
   text-transform: uppercase;
   color: #727272;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
 }
 
 nav a.active, nav a:hover  {
   background-color: #39aae1;
-  color: white;
+  color: #ffffff;
 }
 
 #banner{
+  display: flex;
+  justify-content: center;
   background-image: url('../images/img1.jpg');
+  background-position: center;
   background-size: cover;
   height: 670px;
+}
+
+.column{
+  flex-direction: column;
+}
+
+.banner_headline{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+}
+.banner_headline h1{
+  font-size: 70px;
+  color: #ffffff;
+  text-shadow: 0px 1px 0px #555555;
+  padding: 0;
+  margin: 0;
+  max-width: 350px;
+
+}
+
+.banner_headline h2{
+  font-size: 21px;
+  color: #ffffff;
+  text-shadow: 0px 1px 0px #555555;
+  padding: 0;
+  margin: 0;
+  margin-top: 30px;
+  max-width: 350px;
+}
+
+.banner_options{
+  display: flex;
+  height: 210px;
+  background-color: #39aae1;
+  
+}
+.banner1,
+.banner2,
+.banner3{
+  flex: 1;
+  color: #ffffff;
+  padding: 20px;
+
+}
+.banner_title{
+  font-size: 21px;
+}
+.banner_desc{
+  font-size: 13px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 280px;
+  
+}
+.banner_options a{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 5px;
+  border: 1px  solid #ffffff;
+  display: inline-block;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 12px;
+}
+.banner1{
+  background-color: #39aae1;
+}
+.banner2{
+  background-color: #0079c7;
+}
+.banner3{
+  background-color: #2b4c99;
+  
+}
+
+.hour_first,
+.hour_second,
+.hour_third
+{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #ffffff;
+  font-size: 13px;
+  padding: 3+px;
+
+  
 }
