--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  padding-bottom: 25px;
 }
 
 header{
@@ -154,7 +155,87 @@ nav a.active, nav a:hover  {
   margin-bottom: 20px;
   border-bottom: 1px solid #ffffff;
   font-size: 13px;
-  padding: 3+px;
+  padding: 3px;
 
   
 }
+#section_main{
+  display: flex;
+  justify-content: center;
+  
+  
+  }
+
+  #section_main section{
+  flex: 2;
+  
+}
+
+#section_main aside{
+  flex: 1;
+  
+}
+
+.widget_title{
+  margin-top: 30px;
+  margin-bottom: 20px;
+  
+}
+.widget_title_text{
+  
+  font-size: 16px;
+  font-weight: bold;
+  color: #000000;
+  
+}
+
+.widget_bar{
+  width: 50px;
+  height: 2px;
+  margin-top: 10px;
+  background-color: #36a9e1;
+}
+
+
+.widget_body_deparments div{
+  width: 150px;
+  height: 150px;
+  background-color: #39aae1 ;
+  margin-bottom: 20px;
+    
+  
+}
+.widget_body_deparments{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.widget_body_appointment{
+  display: flex;
+  flex-direction: column;
+}
+
+.end{
+  display: flex;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #c7c5c5;
+  justify-content: left;
+  align-items: center;
+  
+  
+
+}
+
+.icon{
+  width: 20px ;
+  height: 20px;
+  margin-right: 5px;
+}
+
+#app_msg{
+  padding-bottom: 20px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #c7c5c5;
+}
+
