--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,3 +239,59 @@ nav a.active, nav a:hover  {
   border-bottom: 1px solid #c7c5c5;
 }
 
+.news_data {
+  display: flex;
+  
+}
+
+.news_posted_at {
+  color: #ffffff;
+  font-size: 12px;
+  background-color: #2b4c99;
+  padding: 10px;
+  margin-right: 2px;
+
+}
+
+.news_comments {
+  color: #ffffff;
+  font-size: 12px;
+  background-color: #39aae1;
+  padding: 10px;
+}
+
+.flex{
+  display: flex;
+  flex-wrap: wrap;
+}
+article{
+  flex: 1;
+  margin-right:20px ;
+  min-width: 300px;
+}
+article a{
+  text-decoration: none;
+}
+.news_thumbnail{
+  margin-top: 30px;
+}
+.news_thumbnail img{
+  width: 100%;
+  height: auto;
+}
+
+.news_title{
+  margin-top: 25px;
+  margin-bottom: 25px;
+  font-size: 23px;
+  color: #000000;
+}
+
+.news_resume {
+  color: #5c5c5c;
+  font-size: 14;
+  line-height: 20px;
+  margin-bottom: 30px;
+}
+
+
