--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@ body{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  padding-bottom: 25px;
 }
 
 header{
@@ -293,5 +292,126 @@ article a{
   line-height: 20px;
   margin-bottom: 30px;
 }
+footer{
+  background-color:#1e1e1e;
+  display: flex;
+  justify-content: center;
+  
+  
+}
+.ft_column{
+  flex-direction: column;
 
+}
+.footer_menu{
+  display: flex;
+  flex: 1;
+}
+
+.fm_1,.fm_2,.fm_3{
+  flex: 1;
+  padding: 20px;
+  
+}
+.footer_menu a{
+  display: block;
+  text-decoration: none;
+  color: #ffffff;
+}
+.fm_1{
+  background-color: #39aae1;
+}
+.fm_2{
+  background-color: #0079c7;
+}
+.fm_3{
+  background-color: #2b4c99;
+  
+}
+
+.footer_area{
+  
+  display: flex;
+  justify-content: center;
+  
+  
+}
+.footer_areaitem{
+  flex: 1;
+  color:#ffffff;
+}
+
+footer .widget_title_text{
+  color:#ffffff;
+}
+footer .widget_bar{
+  margin-bottom: 20px;
+}
+.ft_title{
+  font-size: 21px;
+}
+
+.ft_desc{
+  font-size: 13px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.footer_copy{
+  color: #5c5c5c;
+  border-top: 2px solid #2c2c2c;
+  height: 40px;
+  line-height: 40px;
+  font-size: 12px;
+  margin-top: 30px;
+}
+
+.footer_area .widget_body{
+  display: flex;
+  flex-direction: column;
+  color: #5c5c5c;
+  line-height: 20px;
+  font-size: 12px;
+  margin-right: 25px;
+  
+}
+.six{
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: flex-start;
+  color : #0079c7;
+  
+  
+
+}
+.wb1,.wb2,.wb3{
+  margin-bottom: 20px;
+}
+
+
+
+.wb2{
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+#end{
+  height: auto;
+  width: 110px;
+  
+  
+  
+}
+
+#contacts{
+  text-align: left;
+  align-self: flex-end;
+
+}
+
+#contacts a, .widget_body a{
+  color: #ffffff;
+  text-decoration: none;
+}
 
