--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,22 +3,19 @@
 }
 body{
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  padding: 0;  
 }
 
 header{
   display: flex;
   justify-content: center;
-  height: 120px;
-  
+  height: 120px;  
 }
 
-.container{
+.container{ 
   width: 990px;
   display: flex;
   justify-content: space-between;
-  
 }
 
 .logo{
@@ -60,11 +57,11 @@ nav a.active, nav a:hover  {
 }
 
 #banner{
-  display: flex;
-  justify-content: center;
   background-image: url('../images/img1.jpg');
   background-position: center;
   background-size: cover;
+  display: flex;
+  justify-content: center;
   height: 670px;
 }
 
@@ -100,17 +97,15 @@ nav a.active, nav a:hover  {
 }
 
 .banner_options{
-  display: flex;
   height: 210px;
-  background-color: #39aae1;
-  
+  display: flex;  
 }
 .banner1,
 .banner2,
 .banner3{
   flex: 1;
   color: #ffffff;
-  padding: 20px;
+  padding: 20px;  
 
 }
 .banner_title{
@@ -120,8 +115,6 @@ nav a.active, nav a:hover  {
   font-size: 13px;
   margin-top: 20px;
   margin-bottom: 20px;
-  width: 280px;
-  
 }
 .banner_options a{
   margin-top: 20px;
@@ -158,19 +151,19 @@ nav a.active, nav a:hover  {
 
   
 }
-#section_main{
+#geral{
   display: flex;
   justify-content: center;
   
   
   }
 
-  #section_main section{
+  #geral section{
   flex: 2;
   
 }
 
-#section_main aside{
+#geral aside{
   flex: 1;
   
 }
@@ -217,7 +210,7 @@ nav a.active, nav a:hover  {
 
 .end{
   display: flex;
-  padding-bottom: 10px;
+  padding: 10px;
   border-bottom: 1px solid #c7c5c5;
   justify-content: left;
   align-items: center;
@@ -234,16 +227,15 @@ nav a.active, nav a:hover  {
 
 #app_msg{
   padding-bottom: 20px;
-  margin-bottom: 10px;
   border-bottom: 1px solid #c7c5c5;
 }
 
-.news_data {
+article .news_data {
   display: flex;
   
 }
 
-.news_posted_at {
+article .news_posted_at {
   color: #ffffff;
   font-size: 12px;
   background-color: #2b4c99;
@@ -252,7 +244,7 @@ nav a.active, nav a:hover  {
 
 }
 
-.news_comments {
+article .news_comments {
   color: #ffffff;
   font-size: 12px;
   background-color: #39aae1;
@@ -271,22 +263,22 @@ article{
 article a{
   text-decoration: none;
 }
-.news_thumbnail{
+article .news_thumbnail{
   margin-top: 30px;
 }
-.news_thumbnail img{
+article .news_thumbnail img{
   width: 100%;
   height: auto;
 }
 
-.news_title{
+article .news_title{
   margin-top: 25px;
   margin-bottom: 25px;
   font-size: 23px;
   color: #000000;
 }
 
-.news_resume {
+article .news_resume {
   color: #5c5c5c;
   font-size: 14;
   line-height: 20px;
@@ -305,18 +297,19 @@ footer{
 }
 .footer_menu{
   display: flex;
-  flex: 1;
+  
 }
 
 .fm_1,.fm_2,.fm_3{
   flex: 1;
-  padding: 20px;
+  
   
 }
 .footer_menu a{
   display: block;
   text-decoration: none;
   color: #ffffff;
+  padding: 20px;
 }
 .fm_1{
   background-color: #39aae1;
@@ -409,9 +402,13 @@ footer .widget_bar{
   align-self: flex-end;
 
 }
-
 #contacts a, .widget_body a{
   color: #ffffff;
   text-decoration: none;
 }
+
+
+
+
+
 
