--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,8 +407,110 @@ footer .widget_bar{
   text-decoration: none;
 }
 
+.menuMobile{
+  display: none;
+  width: 40px;
+  height: 40px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  margin-right: 20px;
+}
+
+.mm_line{
+  height: 3px;
+  background-color:#39aae1 ;
+}
+
+@media (max-width:850px) {
+  .banner_headline h1{
+    font-size: 55px;
+  }
+
+  .banner_headline h2{
+    font-size: 17px;
+  }
+
+  .banner_headline{
+    padding: 20px;
+  }
+  .container{
+    flex-direction: column;
+    
+  }
+  .banner_options{
+    padding-top: 100px;
+    height: auto;
+    flex-direction: column;
+    margin-bottom: 100px;
+  }
+  #geral section,
+  #geral aside{
+    padding: 20px;
+  }
+
+  .flex{
+    display: flex;
+    flex-direction: column;
+    
+  }
+
+  .footer_menu{
+    flex-direction: column;
+  }
+  .footer_area{
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  .footer_copy{
+    padding-left: 20px;
+  }
+
+  #ds{
+    padding-top: 50px;
+  }
+
+#down{
+  padding-top: 250px;
+}
+
+header .container{
+  flex-direction: row;
+}
+
+nav ul{
+  flex-direction: column;
+  display: none;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  background-color: #ffffff;
+}
+
+header{
+  height: auto;
+}
+
+.logo{
+  padding-left: 20px;
+}
+
+.menuMobile{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
 
 
 
+
+
+
+
+
+
+
+
+}
 
 
